--- a/app/public/scss/sections/banner.scss
+++ b/app/public/scss/sections/banner.scss
@@ -38,7 +38,7 @@
         }
 
         &__subtitle {
-            color: $main-color;
+            color: #FFF;
             font-size: 30px;
             line-height: 30px;
             font-family: 'robotothin';
